# EngineXX

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
shaders/: fMain.glsl  vMain.glsl
source/private/: main.cpp  shader.cpp
source/public/: shader.hpp
